Fix spacing and text on cookin q page

--- a/src/styles.css
+++ b/src/styles.css
@@ -312,8 +312,13 @@ nav {
   display: flex;
   margin: 0 auto;
   margin-top: 10px;
+  margin-bottom: 10px;
   max-width: 550px;
+  color: #7dc3ad;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
   list-style-type: none;
+  line-height: 1;
 }
 
 .recipe-tag {
@@ -326,7 +331,7 @@ nav {
 }
 
 .sad-heart {
-  left: 24px;
+  left: 7px;
 }
 
 .ingredient-row {
@@ -468,6 +473,7 @@ nav {
   background-color: #7dc3ad;
   letter-spacing: 3px;
   outline: none;
+  margin-top: 10px;
 }
 
 .az-button:hover {
@@ -484,25 +490,16 @@ nav {
 
 .queue-block {
   display: flex;
-  justify-content: space-around;
   align-items: center;
-  margin: 0 50px;
+  margin: 30px 50px;
   background-color: #f5f5f5;
 }
 
 .queue-recipe-img {
   top: 0;
   left: 0;
-}
-
-.queue-recipe-img {
+  margin-right: 30px;
   width: 300px;
-}
-
-.queue-heart {
-  position: absolute;
-  top: 20px;
-  right: 30px;
 }
 
 .queue-words-container {
